--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
               </p>
               <br>
               <p>The purpose of this page is for me to showcase a few of the projects I have been involved in. 
-                <br> For more information about me or any of the projects, you can contact me via linked in or by email.  <br>
-                -JJ
+                For more information about me or any of the projects, you can contact me via linked in or by email.  <br>
+                <br>-JJ
             </p>
             </div>
           </div>
